--- a/.github/workflows/recovery.yml
+++ b/.github/workflows/recovery.yml
@@ -18,7 +18,7 @@ jobs:
 
     steps:
     - name: Check Out
-      uses: actions/checkout@main
+      uses: actions/checkout@v4
 
     - name: Prepare the environment
       run: |
